Closed
Bug 1220037
Opened 10 years ago
Closed 10 years ago
corrupted convolution from out-of-position nyquist DFT coefficient
Categories
(Core :: Web Audio, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla45
People
(Reporter: karlt, Assigned: karlt)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
40 bytes,
text/x-review-board-request
|
padenot
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details |
|
40 bytes,
text/x-review-board-request
|
padenot
:
review+
|
Details |
FFTBlock was not written for packed Nyquist format as used by libav FFT.
BufferComplexMultiply knows nothing about this format and so ends up corrupting the DC coefficient when Nyquists are multiplied.
| Assignee | ||
Comment 1•10 years ago
|
||
bug 1220037 pack and unpack Nyquist for MOZ_LIBAV_FFT r?padenot
BufferComplexMultiply knows nothing about this format and so ends up
corrupting the DC coefficient if packed Nyquists are multiplied.
Attachment #8681077 -
Flags: review?(padenot)
| Assignee | ||
Comment 2•10 years ago
|
||
bug 1220037 test convolution r?padenot
This is in the mochitest suite so that Android and B2G tests can run it, but
designed so that it can be moved to web-platform-tests when they run on all
platforms.
Attachment #8681078 -
Flags: review?(padenot)
Updated•10 years ago
|
Rank: 5
Comment 3•10 years ago
|
||
Comment on attachment 8681077 [details]
MozReview Request: bug 1220037 pack and unpack Nyquist for MOZ_LIBAV_FFT r?padenot
https://reviewboard.mozilla.org/r/23747/#review21497
Attachment #8681077 -
Flags: review?(padenot) → review+
Updated•10 years ago
|
Attachment #8681078 -
Flags: review?(padenot) → review+
Comment 4•10 years ago
|
||
Comment on attachment 8681078 [details]
MozReview Request: bug 1220037 test convolution r?padenot
https://reviewboard.mozilla.org/r/23749/#review21495
::: dom/media/webaudio/test/test_convolverNodeDelay.html:64
(Diff revision 1)
> +// The 5/4 ratio rovides sampling across a range of delays and offsets within
s/rovides/provides/
Comment 6•10 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/7fbc38f3b73c
https://hg.mozilla.org/mozilla-central/rev/9a7d7f86ff60
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox45:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
| Assignee | ||
Updated•10 years ago
|
Flags: in-testsuite+
| Assignee | ||
Comment 7•10 years ago
|
||
Comment on attachment 8681077 [details]
MozReview Request: bug 1220037 pack and unpack Nyquist for MOZ_LIBAV_FFT r?padenot
Approval Request Comment
[Feature/regressing bug #]: regression from bug 1157768
[User impact if declined]: distorted audio on desktop platforms when some reverb effects
[Describe test coverage new/current, TreeHerder]: new test.
[Risks and why]: small patch and test give low risk and confidence.
[String/UUID change made/needed]: none.
Attachment #8681077 -
Flags: approval-mozilla-beta?
Attachment #8681077 -
Flags: approval-mozilla-aurora?
Updated•10 years ago
|
status-firefox43:
--- → affected
status-firefox44:
--- → affected
Comment 8•10 years ago
|
||
Comment on attachment 8681077 [details]
MozReview Request: bug 1220037 pack and unpack Nyquist for MOZ_LIBAV_FFT r?padenot
Let's take it.
Should be in 43 beta 2.
Please land also the test.
Attachment #8681077 -
Flags: approval-mozilla-beta?
Attachment #8681077 -
Flags: approval-mozilla-beta+
Attachment #8681077 -
Flags: approval-mozilla-aurora?
Attachment #8681077 -
Flags: approval-mozilla-aurora+
Comment 9•10 years ago
|
||
| bugherder uplift | ||
Comment 10•10 years ago
|
||
| bugherder uplift | ||
Comment 11•10 years ago
|
||
| bugherder uplift | ||
https://hg.mozilla.org/releases/mozilla-b2g44_v2_5/rev/dfdf94bfd152
https://hg.mozilla.org/releases/mozilla-b2g44_v2_5/rev/779eec6a0b9e
status-b2g-v2.5:
--- → fixed
You need to log in
before you can comment on or make changes to this bug.
Description
•