Bug 1220037 - pack and unpack Nyquist for MOZ_LIBAV_FFT. r=padenot, a=sylvestre

BufferComplexMultiply knows nothing about this format and so ends up
corrupting the DC coefficient if packed Nyquists are multiplied.

--HG--
extra : source : 7fbc38f3b73cf7307fbbb7362f3ba51cd0141ae2